# TrayWave

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  run.py  tray_wave_readme_en.md
config/: stations.json  traywave_stations.json
packaging/: traywave.desktop
traywave/: __init__.py  __main__.py  app.py
traywave/core/: engine.py  stations.py
traywave/data/: stations.py
traywave/ui/: __init__.py  dialogs.py  menu_builder.py  menu_positioning.py  popups.py  tray.py  tray_main.py
traywave/ui/styles/: style_manager.py  themes.json
traywave/ui/widgets/: menu_header.py
traywave/utils/: geometry.py
