[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traywave"
version = "0.1.2"
description = "System tray radio player"
authors = [{name = "Košava", email = "kosava@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-Qt6>=6.5.0",
    "PyQt6-Multimedia>=6.5.0"
]

[project.scripts]
traywave = "traywave.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["traywave*"]

[tool.setuptools.package-data]
"traywave.resources.icons" = ["*.png", "*.svg"]
